syntax = "proto3";

package sensorService;

option go_package = "sensorpb";

option java_package = "com.jjrobot.andy4.sensorpb";
option java_outer_classname = "SensorServicePB";

// sensorService.SensorService 传感器服务
//
// 开发管理平台功能参考: http://10.10.10.2/detect
service SensorService {
    //计算前方障碍的距离与方法(该接口不再支持)
    rpc GetDetect (GetDetectRequest) returns (stream GetDetectResponse) {}

    // 获取动态感应数据(该接口不再支持)
    rpc GetMotionInduction(GetMotionInductionRequest) returns (stream GetMotionInductionResponse) {}

    //获取触摸感应数据
    rpc GetTouch (GetTouchRequest) returns (stream GetTouchResponse) {}
    
    //碰撞传感器数据
    rpc GetBumper(GetBumperRequest) returns (stream GetBumperResponse){}

    //防跌落传感器数据
    rpc GetAnti(GetAntiRequest) returns (stream GetAntiResponse){}

    //避障距离传感器
    rpc GetObs(GetObsRequest) returns (stream GetObsResponse){}

}

// 检测方向
enum DetectDirection {
    _ZERO_DIR = 0; // 零值, 不使用
    RELEASE_DIR = 1; // 释放
    LEFT = 2; // 居左
    CENTER = 3; // 居中
    RIGHT = 4; // 居右
}

// 检测距离
enum DetectDistance {
    _ZERO_DIS = 0; // 零值, 不使用
    RELEASE_DIS = 1; // 释放
    CLOSE = 2; // 近距
    MEDIUM = 3; // 中距
    LONG = 4; // 远距
}

//传感器综合
message GetDetectRequest {}
message GetDetectResponse {
    DetectDirection direction = 1;
    DetectDistance distance = 2;
}

//动态人体传感器
message GetMotionInductionRequest {}
message GetMotionInductionResponse {
    bool left = 1; // 左侧感应指示
    bool right = 2; // 右侧感应指示
}

// 触摸传感器
message GetTouchRequest {}
message GetTouchResponse {
    bool hand_left = 1; // 左手触摸
    bool hand_right = 2; // 右手触摸
    bool head = 3; // 头部触摸
}

// 碰撞传感器
message GetBumperRequest {}
message GetBumperResponse {
    bool forward = 1; // 前面碰撞
    bool backward = 2; // 后面碰撞
}
// 跌落传感器
message GetAntiRequest {}
message GetAntiResponse {
    bool forward_left_status = 1; // 前左跌落传感器状态
    bool forward_right_status = 2; // 前右跌落传感器状态
    uint32 forward_left_distance = 3; // 前左跌落传感器距离
    uint32 forward_right_distance = 4; // 前右跌落传感器距离
}

// 避障传感器
message GetObsRequest {}
message GetObsResponse {
    uint32 forward_left = 1; // 前左跌落传感器距离
    uint32 forward_right = 2; // 前右跌落传感器距离
}


